Fixing various Xplat errors not related to item components